@@ -1,3 +1,4 @@
+	* make disk cache pool allocator configurable
 	* fix library ABI to not depend on logging being enabled
 	* use hex encoding instead of base32 in create_magnet_uri
 	* include name, save_path and torrent_file in torrent_status, for improved performance
